# ucal-autoprocess

./: pyproject.toml  setup.cfg  setup.py
autoprocess/: __init__.py  calibration.py  diagnostic.py  processing.py  scanData.py  serialAnalysis.py  statelessAnalysis.py  utils.py
