[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ucal-autoprocess"
dynamic = ["version"]
description = "Automated processing tools for uCAL TES data"
authors = [
    {name = "NSLS-II SST Beamline Staff", email = "ctitus@bnl.gov"}
]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib", 
    "h5py",
    "tiled",
    "mass @ git+https://github.com/usnistgov/mass.git@v0.8.5",
    "databroker"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8"
]

[tool.setuptools.packages.find]

[tool.setuptools_scm]
write_to = "autoprocess/_version.py"