[metadata]
name = ucal-autoprocess
version = 0.1.0
description = Automated processing tools for uCAL TES data
long_description = file: README.md
long_description_content_type = text/markdown
author = NSLS-II SST Beamline Staff
author_email = ctitus@bnl.gov
license = BSD-3-Clause
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    matplotlib
    h5py
    tiled
    mass
    ucalpost

[options.extras_require]
dev =
    black
    flake8 